add placeholder for input search

--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -41,15 +41,17 @@
                name="fullName"
                id="fullName"
                (keyup)="loadGuidanceDocuments()"
+               placeholder="(VD): Trần Lê Hải"
         >
       </div>
       <div class="col-md-5">
-        <label>Về việc</label>
+        <label>Tiêu đề</label>
         <input class="form-control"
                [(ngModel)]="guidanceDocumentName"
                name="guidanceDocumentName"
                id="guidanceDocumentName"
                (keyup)="loadGuidanceDocuments()"
+               placeholder="(VD): Kế hoạch PCCC"
         >
       </div>
       <div class="col-md-2">
