--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -91,7 +91,7 @@
   <button class="btn btn-primary" (click)="onCreateGuidanceDocument()" *ngIf="!isPrincipal">Tạo mới</button>
 </div>
 <div class="container">
-  <table class="table table-hover table-responsive">
+  <table class="table table-hover table-fit">
     <thead>
     <tr>
       <th (click)="onSort('guidanceDocumentId')">
