--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,2 +1,15 @@
 $primary: #4253f0;
 $primary-hover: #9aa3ff;
+
+
+// space table evenly
+table.table-fit {
+  width: auto !important;
+  table-layout: auto !important;
+}
+table.table-fit thead th,
+table.table-fit tbody td,
+table.table-fit tfoot th,
+table.table-fit tfoot td {
+  width: auto !important;
+}
