--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -129,7 +129,7 @@
   </div>
 </div>
 <div class="container">
-  <table class="table table-hover table-responsive">
+  <table class="table table-hover table-responsive table-fit">
     <thead>
     <tr>
       <th (click)="onSort('initiationPlanName')">
