--- a/src/app/features/post-login/user-list/user-list.component.html
+++ b/src/app/features/post-login/user-list/user-list.component.html
@@ -130,7 +130,7 @@
   <button class="btn btn-primary" (click)="onCreateUser()">Tạo mới</button>
 </div>
 
-    <table class="table table-hover">
+    <table class="table table-hover table-fit">
         <thead>
         <tr>
             <th (click)="onSort('user.userId')">
