fix assign assignment

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -133,7 +133,7 @@
   </p-dialog>
   <p-dialog
     header="Đánh giá tài liệu"
-    [visible]="true"
+    [(visible)]="uploadFileVisible"
     [modal]="true"
     [style]="{ width: '60vw', height: '600px' }"
     [draggable]="false"
