--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -263,6 +263,6 @@ ul {
 .width-200 {
     width: 200px;
 }
-.tree-table {
-    font-size: 16px;
-}
+// .tree-table {
+//     font-size: 16px;
+// }
