--- a/src/app/features/post-login/user-list/user-create/user-create.component.html
+++ b/src/app/features/post-login/user-list/user-create/user-create.component.html
@@ -3,7 +3,7 @@
 </div>
 <p-toast position="top-right" key="error"></p-toast>
 <p-toast position="center" key="confirm"></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-confirmDialog key="popUpConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
 
 <form [formGroup]="createUserForm" >
   <div class="row">
