add confirmation for school update

--- a/src/app/features/post-login/school-list/school-create/school-create.component.html
+++ b/src/app/features/post-login/school-list/school-create/school-create.component.html
@@ -138,4 +138,4 @@
 </div>
 
 <p-toast position="top-right" key="error"></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-confirmDialog key="updateConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
