--- a/src/app/features/post-login/user-list/user-update/user-update.component.html
+++ b/src/app/features/post-login/user-list/user-update/user-update.component.html
@@ -117,4 +117,4 @@
         <div class="spinner-border" role="status"></div>
     </div>
 </div>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-confirmDialog key="updateUserConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
