--- a/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
@@ -153,4 +153,4 @@
 </div>
 
 <p-toast position="top-right" key="error"></p-toast>
-<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
+<p-confirmDialog key="createConfirm" [style]="{width: '50vw'}"></p-confirmDialog>
