--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -10,7 +10,7 @@
            class="form-control small-input fontAwesome mb-3"
            [(ngModel)]="globalSearch"
            (keyup)="loadGuidanceDocuments()"
-           placeholder="&#xF002; Tra cứu nhanh"
+           placeholder="&#xF002; Tra cứu nhanh theo tiêu đề hoặc người tạo"
     >
   </div>
   <div *ngIf="advanceSearch" class="col-md-10">
