--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -41,9 +41,10 @@
                 [showClear]="true"
                 placeholder="Chọn 1 trường"
                 (onChange)="loadDocuments()"
+                *ngIf="!isPrincipal"
 
     >
-      <ng-template pTemplate="selectedItem">
+      <ng-template pTemplate="selectedItem" >
         <div class="flex align-items-center gap-2" *ngIf="selectedSchool">
           <div>{{ selectedSchool.schoolName }}</div>
         </div>
