--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -4,6 +4,7 @@
   [style]="{ width: '50vw' }"
   acceptLabel="Đồng ý"
   rejectLabel="Hủy"
+  key="confirmAssignment"
 ></p-confirmDialog>
 <!-- popup file upload -->
 <p-dialog
@@ -369,11 +370,8 @@
               </div>
             </form>
           </div>
-          <div *ngIf="selectedAssignment.comments" class="comment-content pt-2">
-            <div
-              *ngFor="let item of selectedAssignment.comments"
-              class="comment-item row"
-            >
+          <div *ngIf="comments" class="comment-content pt-2">
+            <div *ngFor="let item of comments" class="comment-item row">
               <div
                 class="comment-item-person col-md-1 d-flex justify-content-center align-items-center"
               >
@@ -399,6 +397,25 @@
         ></ng-container>
         <ng-template #showHistory>
           <span class="font-weight-bold">Lịch sử</span>
+
+          <ng-container *ngFor="let item of historyDtos">
+            <div class="history-item row mb-2">
+              <div
+                class="history-item-ava col-md-1 d-flex justify-content-center align-items-center"
+              >
+                <img src="../../../../../../assets/img/user_icon.svg" alt="" />
+              </div>
+              <div class="col-md-11 history-item-content">
+                <span>
+                  {{ item.actionDescription }}
+                </span>
+                <br />
+                <span class="text-black-50 history-date">
+                  {{ item.createdDate | date : "dd/MM/yyyy  hh:mm" }}
+                </span>
+              </div>
+            </div>
+          </ng-container>
         </ng-template>
       </div>
 
