--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -139,6 +139,20 @@ ul {
         }
     }
 }
+.history-item {
+    .history-item-ava {
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
+    .history-item-content {
+        padding-left: 20px;
+        .history-date {
+            font-size: 14px;
+        }
+    }
+}
 .font-size-12 {
     font-size: 12px;
 }
