--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.scss
@@ -15,12 +15,12 @@
     width: 100%;
 }
 .action-item {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: $primary;
     border-color: $primary;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 16px;
     &:hover {
         background-color: $primary-hover;
         border-color: $primary-hover;
@@ -130,7 +130,7 @@ ul {
     }
 }
 .comment-content {
-    border-top: 0.5px solid gray;
+    border-top: 0.5px solid $primary;
 }
 .comment-item {
     background-color: #ffffff;
@@ -189,7 +189,9 @@ ul {
     }
     .left-box {
         overflow: auto;
-        height: 600px;
+        height: 100%;
+
+        // height: 600px;
     }
 }
 .file-input {
@@ -256,13 +258,13 @@ ul {
 }
 .tab {
     .p-button {
-        color: black;
+        color: $primary-hover;
         font-size: 16px;
         margin-right: 10px;
         border-radius: 25px;
+        border: 0.5px solid $primary-hover;
         background-color: #fff;
         padding: 10px 40px;
-        border: none;
         &:hover {
             background-color: $primary-hover;
             color: white;
@@ -290,4 +292,11 @@ ul {
 }
 a {
     text-decoration: none;
+}
+.tree-table {
+    width: 100%;
+}
+td,
+th {
+    font-size: 16px;
 }
