fix can delete comment

--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -407,6 +407,7 @@
                 <span>{{ item.content }}</span>
               </div>
               <div
+                *ngIf="this.user === item.creator.email"
                 class="col-md-1 d-flex justify-content-center align-items-center"
                 (click)="toggleMenu(item.commentId, $event)"
               >
