Fix crash create

--- a/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -14,7 +14,7 @@
   <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
 </div>
 <ng-template #inspectorList>
-  <div class="list-inspector h-100 d-flex flex-column">
+  <div class="list-inspector d-flex flex-column">
     <div class="list-inspector-header px-3 text-center">
       <h5 class="mx-auto mt-2">Danh sách thanh tra</h5>
       <div class="total">
