validate file popup

--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<h4>Dashboard</h4>
+<div class="card" style="width: 400px">
+  <p-chart type="pie" [data]="basicData" [options]="basicOptions"></p-chart>
+</div>
