add download template

--- a/src/app/features/post-login/user-list/user-list.component.html
+++ b/src/app/features/post-login/user-list/user-list.component.html
@@ -312,5 +312,8 @@
     <button class="btn btn-primary mt-3" (click)="onCreateUserByFile()">
       Xác nhận
     </button>
+    <button class="btn btn-info mt-3 ml-3" (click)="downloadTemplate()">
+      Tải file mẫu
+    </button>
   </div>
 </p-dialog>
