--- a/src/app/features/post-login/school-list/school-list.component.html
+++ b/src/app/features/post-login/school-list/school-list.component.html
@@ -1,6 +1,13 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+  crossorigin="anonymous"
+/>
 <h2>Danh sách các trường</h2>
 <div class="d-flex justify-content-end mb-3" *ngIf="!isDirector">
   <button class="btn btn-primary" (click)="onCreateSchool()">Tạo mới</button>
@@ -13,61 +20,98 @@
     [rows]="5"
     dataKey="schoolId"
     [showCurrentPageReport]="true"
-    [tableStyle]="{ 'min-width': '50rem','min-height': '150px' }"
+    [tableStyle]="{ 'min-width': '50rem', 'min-height': '150px' }"
     currentPageReportTemplate="Hiện từ {first} đến {last} trong tổng {totalRecords} bản ghi"
     [rowsPerPageOptions]="[5, 10, 20]"
     [globalFilterFields]="['schoolId', 'schoolName', 'exactAddress']"
-    [scrollable]="true" scrollHeight="400px"
+    [scrollable]="true"
+    scrollHeight="400px"
     [(selection)]="selectedSchool"
     selectionMode="single"
   >
     <ng-template pTemplate="caption">
       <div class="d-flex justify-content-start">
-                <span class="w-50">
-                    <input pInputText
-                           type="text"
-                           class="fontAwesome w-100"
-                           (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
-                           placeholder="&#xF002; Tra cứu nhanh theo tên trường hoặc địa chỉ"/>
-                </span>
-        <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+        <span class="w-50">
+          <input
+            pInputText
+            type="text"
+            class="fontAwesome w-100"
+            (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
+            placeholder="&#xF002; Tra cứu nhanh theo tên trường hoặc địa chỉ"
+          />
+        </span>
+        <button
+          pButton
+          label="Clear"
+          class="p-button-outlined"
+          icon="pi pi-filter-slash"
+          (click)="clear(dt1)"
+        ></button>
       </div>
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th pSortableColumn="schoolId">Mã
+        <th pSortableColumn="schoolId">
+          Mã
           <p-sortIcon field="schoolId"></p-sortIcon>
         </th>
-        <th pSortableColumn="schoolName">Tên trường
+        <th pSortableColumn="schoolName">
+          Tên trường
           <p-sortIcon field="schoolName"></p-sortIcon>
         </th>
-        <th pSortableColumn="exactAddress">Địa chỉ
+        <th pSortableColumn="exactAddress">
+          Địa chỉ
           <p-sortIcon field="exactAddress"></p-sortIcon>
         </th>
-        <th pSortableColumn="isActive">Trạng thái
+        <th pSortableColumn="isActive">
+          Trạng thái
           <p-sortIcon field="isActive"></p-sortIcon>
         </th>
         <th></th>
-
       </tr>
       <tr>
         <th></th>
         <th>
-          <p-columnFilter type="text" field="schoolName" placeholder="(VD): Trường mầm non Ánh Sao"></p-columnFilter>
-
+          <p-columnFilter
+            type="text"
+            field="schoolName"
+            placeholder="(VD): Trường mầm non Ánh Sao"
+          ></p-columnFilter>
         </th>
         <th>
-          <p-columnFilter type="text" field="exactAddress" placeholder="(VD): Số 2, Nguyễn Khánh Toàn"></p-columnFilter>
+          <p-columnFilter
+            type="text"
+            field="exactAddress"
+            placeholder="(VD): Số 2, Nguyễn Khánh Toàn"
+          ></p-columnFilter>
         </th>
 
         <th>
-          <p-columnFilter field="isActive" matchMode="equals" [showMenu]="false">
-            <ng-template pTemplate="filter" let-value let-filter="filterCallback">
-              <p-dropdown [ngModel]="value" [options]="statuses" (onChange)="filter($event.value)" placeholder="Tất cả"
-                          [showClear]="true">
+          <p-columnFilter
+            field="isActive"
+            matchMode="equals"
+            [showMenu]="false"
+          >
+            <ng-template
+              pTemplate="filter"
+              let-value
+              let-filter="filterCallback"
+            >
+              <p-dropdown
+                [ngModel]="value"
+                [options]="statuses"
+                (onChange)="filter($event.value)"
+                placeholder="Tất cả"
+                [showClear]="true"
+              >
                 <ng-template let-option pTemplate="item">
-                  <span
-                    [class]="option.value ? 'badge badge-pill badge-success' : 'badge badge-pill badge-danger'">{{option.label}}</span>
+                  <p-tag
+                    class="status"
+                    [severity]="option.value ? 'success' : 'danger'"
+                    [rounded]="true"
+                  >
+                    {{ option.label }}
+                  </p-tag>
                 </ng-template>
               </p-dropdown>
             </ng-template>
@@ -82,31 +126,37 @@
         <td>{{ school.schoolName }}</td>
         <td>{{ school.exactAddress }}</td>
         <td>
-          <span
-            [class]="school.isActive ? 'badge badge-pill badge-success' : 'badge badge-pill badge-danger'">{{ school.isActive ? "Hoạt động" : "Ngưng hoạt động" }}</span>
+          <p-tag
+            class="status"
+            [severity]="school.isActive ? 'success' : 'danger'"
+            [rounded]="true"
+          >
+            {{ school.isActive ? "Hoạt động" : "Ngưng hoạt động" }}
+          </p-tag>
         </td>
-        <td style="text-align: center"
-            class="d-flex td-action justify-content-center align-items-center">
-          <div class="action-item d-flex justify-content-center align-items-center mx-2">
+        <td
+          style="text-align: center"
+          class="d-flex td-action justify-content-center align-items-center"
+        >
+          <div
+            class="action-item d-flex justify-content-center align-items-center mx-2"
+          >
             <i
               class="bi bi-info-circle-fill"
               (click)="onDetail(school.schoolId)"
             ></i>
           </div>
-          <div class="action-item d-flex justify-content-center align-items-center mx-2"
-               *ngIf="!isDirector"
+          <div
+            class="action-item d-flex justify-content-center align-items-center mx-2"
+            *ngIf="!isDirector"
           >
             <i
               class="bi bi-pencil-fill"
               (click)="onUpdate(school.schoolId)"
-
             ></i>
           </div>
-
-
         </td>
       </tr>
     </ng-template>
-
   </p-table>
 </div>
