--- a/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
+++ b/src/app/features/post-login/school-side/assignment/assign-assignment/assign-assignment.component.html
@@ -13,6 +13,10 @@
   [draggable]="false"
   [resizable]="false"
 >
+  <!-- <ngx-doc-viewer [url]="safePdfUrl"></ngx-doc-viewer> -->
+  <!-- app.component.html -->
+  <!-- <app-document-viewer></app-document-viewer> -->
+
   <div *ngIf="pdfLoaded">
     <iframe [src]="safePdfUrl" width="100%" height="500px"></iframe>
   </div>
@@ -219,7 +223,8 @@
               <ng-container *ngFor="let item of documents; let i = index">
                 <div class="row mb-3">
                   <div class="col-md-11">
-                    <div (click)="openNewTab(item.documentLink)">
+                    <!-- <div (click)="openNewTab(item.documentLink)"> -->
+                    <div (click)="previewFile(item.documentLink)">
                       <div class="file-item px-3 py-1 d-flex">
                         <div
                           class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
